adding window option to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,5 @@
 set -g terminal-overrides "screen*:kLFT5=\eOD:kRIT5=\eOC:kUP5=\eOA:kDN5=\eOB:smkx@:rmkx@"
 setw -g mouse on
 
+set-window-option -g xterm-keys on
+
